--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -16,5 +16,6 @@
         <a href="https://www.google.com">
             <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image">
         </a>
+        <p>Check out my tweets: <a href="tweets.html">View Tweets</a></p>
     </body>
 </html>
