--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -31,7 +31,7 @@
             </aside>
         </main>
         <footer>
-            <p>Made by Mandy Khumalo - <a href="https://x.com/Mandy78773746" targe="_blank"></a>.</p>
+            <p>Made by Mandy Khumalo - <a href="https://x.com/Mandy78773746" targe="_blank">here</a>.</p>
         </footer>
     </body>
 </html>
