--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tweets Page</title>
 </head>
@@ -30,7 +30,7 @@
         </aside>
     </main>
     <footer>
-        <p>Made by Mandy Khumalo - <a href="https://x.com/Mandy78773746" target="_blank"></a></p>
+        <p>Made by Mandy Khumalo - <a href="https://x.com/Mandy78773746" target="_blank">here</a></p>
     </footer>
 </body>
 </html>
