--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -27,7 +27,7 @@
         <p>Check out my tweets: <a href="tweets.html">View Tweets</a></p>
             </article>
             <aside>
-                <p>Placeholder to add comment thread later</p>
+                <p>placeholder to add comment thread later</p>
             </aside>
         </main>
         <footer>
