--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,112 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Mandy Khumalo - Personal Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #4CAF50;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+        section {
+            padding: 20px;
+        }
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background: #333;
+            color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+        .project {
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
 
+<header>
+    <h1>Mandy Khumalo</h1>
+    <p>To give students every chance to grow into confident, effective adults.</p>
+</header>
+
+<nav>
+    <ul>
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
+<section id="introduction">
+    <h2>Introduction</h2>
+    <p>A somatologist by profession and a lab facilitator at Ntokozweni PS.</p>
+</section>
+
+<section id="projects">
+    <h2>Projects</h2>
+    <article class="project">
+        <h3>LocalRepoProject</h3>
+        <p>This was my first project on GitHub to create a hello.txt file</p>
+        <a href="https://github.com/MandyK347/LocalRepoProject" target="_blank">View Project</a>
+    </article>
+    <article class="project">
+        <h3>GitHubCloneProject</h3>
+        <p>The project was about merging files and resolving conflict between files.</p>
+        <a href="https://github.com/MandyK347/GitHubCloneProject" target="_blank">View Project</a>
+    </article>
+    <article class="project">
+        <h3>My First Portfolio</h3>
+        <p>This project was about creating creating html in GitHub.</p>
+        <a href="https://github.com/MandyK347/My_First_Portfolio" target="_blank">View Project</a>
+    </article>
+</section>
+
+<section id="about">
+    <h2>About Me</h2>
+    <p>I'm new to tech world and trying to navigate everything. It's been a fratrsting exprience so far.</p>
+    <ul>
+        <li>Microsoft Office</li>
+        <li>Communication</li>
+        <li>Professional Foundations</li>
+    </ul>
+</section>
+
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Feel free to reach out!</p>
+    <p>Email me at: <a href="mailto:mandy.nnk@gmail.com">mandy.nnk@gmail.com</a></p>
+    <p>
+        <a href="https://www.linkedin.com/in/nomsombuluko-khumalo-55248a21a/" target="_blank">LinkedIn</a> | 
+        <a href="https://github.com/MandyK347" target="_blank">GitHub</a>
+    </p>
+</section>
+
+<footer>
+    <p>&copy; 2024 Mandy Khumalo</p>
+</footer>
+
+</body>
+</html>
